# Hawkeye

./: README.md
backend/: .gitignore  ENVS  ask_llm.py  pyproject.toml  start.json  video_event_detector.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/event-logs/: data.ts  ui.tsx
streamer/: go2rtc.yaml
