[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "devtools>=0.12.2",
    "fastapi>=0.115.12",
    "openai>=1.82.0",
    "opencv-python>=4.11.0.86",
    "psycopg2-binary",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]

[tool.uv.sources]
psycopg2-binary = { path = "psycopg2_binary-2.9.10-cp312-cp312-macosx_14_0_arm64.whl" }
